<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.alexey.simpleandroidexplorer.MainActivity">
    <item
        android:id="@+id/menuItemBack"
        android:title="@string/back"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menuItemGoOver"
        android:title="@string/goOver"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menuItemGoOverSystem"
                android:title="@string/sys"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menuItemGoOverSdCard"
                android:title="@string/sd"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menuItemGoOverAppFolder"
                android:title="@string/appFolder"
                app:showAsAction="never"
                />
        </menu>
    </item>
    <item
        android:id="@+id/menuItemView"
        android:title="@string/view"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menuItemViewTable"
                android:title="@string/table"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menuItemViewGrid"
                android:title="@string/grid"
                app:showAsAction="never"
                />
        </menu>
    </item>
    <item
        android:id="@+id/menuItemCreateFile"
        android:title="@string/createFiles"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menuItemExit"
        android:title="@string/exit"
        app:showAsAction="never"
        />
</menu>